--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
             android:theme="@style/Theme.CarPartsApp.NoActionBar" />
         <activity
             android:name=".Customer.CustomerActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.CarPartsApp.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CarPartsApp.NoActionBar">
